plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'co.com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.projectlombok:lombok:1.18.38'
	annotationProcessor "org.projectlombok:lombok:1.18.38"
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'net.masterthought:cucumber-reporting:5.8.2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
	reports {
		html.required.set(true)
		junitXml.required.set(true)
	}
}


tasks.named('test') {
	useJUnitPlatform()
}
